--- a/src/main/webapp/pages/template/header.xhtml
+++ b/src/main/webapp/pages/template/header.xhtml
@@ -5,13 +5,12 @@
 	xmlns:p="http://primefaces.org/ui">
 			
 	<h:head>
-
 	</h:head>
 	
 	<body>
-		<div class="card">
+		<p:panel id="tb">
 			<h2>Project Management Application</h2>
-		</div>
+		</p:panel>
 	</body>
-
 </html>
+
