--- a/src/main/webapp/pages/template/template.xhtml
+++ b/src/main/webapp/pages/template/template.xhtml
@@ -8,7 +8,7 @@
 	<body>
 	
 		<table>
-			<tr>
+			<tr style="width: 100%;">
 				<td colspan="2">
 					<ui:include src="/pages/template/header.xhtml" />
 				</td>
